2024-09-20  Chao Li  <mslichao@outlook.com>

	* Add C API function qpdf_oh_free_buffer to release memory allocated
	by stream data functions.

2024-08-25  M Holger  <m.holger@qpdf.org>

	* Add new command-line arguments --remove-metadata and --remove-info
	to exclude document metadata and information from the output PDF
	file. Patially fixes #1145.

2024-08-06  M Holger  <m.holger@qpdf.org>

	* Bug fix: when writing real numbers as JSON ensure that they don't
	have a trailing decimal point. Fixes #1261.

2024-07-14  M Holger  <m.holger@qpdf.org>

	* Bug fix: handle named destinations where the entry is a
	dictionary with /D entry instead of an explicit destination.
	Fixes #1238.

2024-07-04  M Holger  <m.holger@qpdf.org>

	* Treat corrupt JPEG streams as unfilterable. This avoids them
	getting uncompressed when writing PDF files with decode level all.

2024-07-02  Jay Berkenbilt  <ejb@ql.org>

	* Add QPDF::setMaxWarnings to set the maximum of warnings before
	warning suppression.

	* Add static option to Pl_DCT to limit memory usage of 
	decompression. The option is generally exposed but is primarily
	intended to support fuzz tests, which have explicit memory limits
	that are smaller than what is commonly seen in the wild with PDF
	files.

	* Add static option to Pl_DCT to control whether decompression of
	corrupt JPEG data is attempted.

2024-07-01  M Holger  <m.holger@qpdf.org>

	* Bug fix: certain invalid object streams caused the insertion of
	invalid entries into in the xref table.

2024-06-29  M Holger  <m.holger@qpdf.org>

	* Bug fix: in QPDFOutlineObjectHelper detect loops in the list of
	direct children of an outline item.

2024-06-27  M Holger  <m.holger@qpdf.org>

	* Add sanity check in QPDF xref table reconstruction to reject
	objects with impossibly large object id in order to improve
	handling of severely damaged PDF files.

2024-06-25  M Holger  <m.holger@qpdf.org>

	* Detect severely damaged PDF files early. After parsing the xref